--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -126,6 +126,8 @@ canvas{
   margin: auto;
 }
 
+
+
 @media (min-width: 768px) {
   .navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
     margin-left: 0px;
@@ -142,6 +144,10 @@ canvas{
   }
   .container-fluid{
     padding: 0px;
+  }
+  .sidebar{
+    display: block;
+    /*height: 100%;*/
   }
 }
 
@@ -348,6 +354,8 @@ div.fc-state-down, .fc-state-active, span.fc-button {
 div.fc-state-up{
   background-color: red;
 }
+
+
 
 
 
