--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -192,11 +192,15 @@ canvas{
     text-align: left;
     margin-left: 30px;
   }
-
-
+  .fc-header td {
+    white-space: normal !important;
+    display:block;
+    width:auto;
+    text-align:left;
+    clear: both;
+  }
 
 }
-
 .navbar-inverse .navbar-form.search-form{
   color: #CCC;
   font-size: 18px;
@@ -281,36 +285,6 @@ li.dropdown{
   border-radius: 50%;
 }
 
-.fc-event-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  border-style: solid;
-  border-width: 0;
-  overflow: hidden;
-}
-
-.fc-event-skin {
-  color: #FFF;
-  border-right: 0!important;
-  cursor: move;
-}
-
-.fc-state-highlight {
-  background: #ffc;
-}
-
-.fc-corner-right .fc-event-inner {
-  padding-left: 2px;
-}
-
-.bg-color-greenLight {
-  background-color: #71843f!important;
-}
-
-.fc-corner-right .fc-event-inner {
-  padding-right: 15px;
-}
 
 .fc-event-time, .fc-event-title {
   padding: 3px 0 2px 3px;
@@ -341,7 +315,7 @@ div.fc-ltr .fc-event-hori.fc-event-end, .fc-rtl div.fc-event-hori.fc-event-start
   border: 1px solid #ccc;
 }
 
-
-
-
-
+.fc-header-title>h2 {
+  font-size:22px;
+  color:#65a0ce;
+}
